# t-siris

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: t_siris.rs  t_utt.rs
benches_analysis/: t_siris_extractor.py  t_siris_plotter_masterissue_with_no_zkp.py  t_siris_plotter_n_attributes.py  t_siris_vs_s3id_plotter.py  t_utt_extractor.py  t_utt_plotter_N_threshold.py  t_utt_plotter_n_attributes.py
src/: commitment.rs  credential.rs  errors.rs  keygen.rs  lib.rs  nullifier.rs  pairing.rs  protocol.rs  schnorr.rs  schnorr_batch.rs  shamir.rs  signature.rs  signer.rs  symmetric_commitment.rs  tests.rs  user.rs
