[package]
name = "t_siris"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
ark-ff = { version = "^0.4.1", default-features = false }
ark-ec = { version = "^0.4.1", default-features = false }
ark-std = { version = "^0.4.0", default-features = false, features = ["std"] }
ark-serialize = { version = "^0.4.1", default-features = false, features = [ "derive" ] }
rayon = { version = "1.5", optional = true  }
digest = { version = "0.10", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_with = { version = "1.10.0", default-features = false, features = ["macros"] }
ark-bls12-381 = { version = "^0.4.0", default-features = false, features = [ "curve" ] }
thiserror = "1.0.63"
rand = { version = "0.8" }

[dev-dependencies]
ark-bls12-381 = { version = "^0.4.0", default-features = false, features = ["curve"] }
criterion = "0.5.1"
rayon = { version = "1.5" }

[features]
default = ["parallel"]
parallel = ["ark-ff/parallel", "ark-ec/parallel", "ark-std/parallel", "rayon"]



[[bench]]
name = "t_siris"
harness = false

[[bench]]
name = "t_utt"
harness = false